# fastpi-template

./: .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: ctx.py  main.py  settings.py
src/models/: base.py  user.py
src/routers/: __init__.py  deps.py  user.py
src/routers/v1/: user.py
src/schemas/: base.py  user.py
src/utils/: datasource.py  error_handle.py  logger.py  response.py  session_ctx.py  util.py
src/utils/middlewares/: __init__.py  sqlalchemy_ctx.py
