[tool.poetry]
name = "fastpi-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "uvicorn"
uvicorn = "^0.18.2"
loguru = "pydantic"
pydantic = "^1.9.1"
humps = "^0.2.2"
SQLAlchemy = "1.4.11"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
pre-commit = "^2.19.0"
commitizen = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
